cabal-version: 2.2
name:          gossip-glomers
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    OverloadedRecordDot
    ScopedTypeVariables
    TypeApplications

  build-depends:
    , aeson
    , async
    , base
    , binary
    , bytestring
    , containers
    , deriving-aeson
    , foldl
    , primitive
    , safe-exceptions
    , text
    , unordered-containers
    , uuid
    , vector

  default-language:   Haskell2010

  ghc-options:        -Wall -fdefer-typed-holes

library
  import:          common-opts
  exposed-modules: 
    Maelstrom.Echo
    Utils.Either
    Node
  hs-source-dirs:  src

executable echo
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: echo
  build-depends:  gossip-glomers

test-suite test
  import:         common-opts
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , gossip-glomers
    , hspec
    , hspec-discover
    , hspec-expectations
    , QuickCheck
